<resources>
    <string name="app_name">Room</string>
    <string name="action_settings">Settings</string>
    <string name="add">Add</string>
    <string name="task_description">Title</string>
    <string name="task_creation_date">Created on</string>
    <string name="user_name_description">User\'s name</string>
    <string name="task_id_label">Task ID:</string>
    <string name="title_label">Title:</string>
    <string name="delete">Delete Task</string>
    <string name="could_not_load_task">Failed to load task details</string>
    <string name="task_completion_state">Completed</string>
    <string name="assignedLabel">Assigned to: %s</string>
    <string name="unassigned">Unassigned</string>
    <string name="users">Users</string>
    <string name="manageUsers">Manage Users</string>
    <string name="taskDetailsAssignedLabel">Assigned to:</string>
    <string name="unassign">Unassign</string>
    <string name="taskDetailsReassignLabel">Assign Task</string>
    <string name="assignTaskInstruction">Assign Task</string>
    <string name="found_user_tasks">This user has %d tasks</string>
    <string name="numTasksAssigned">%d tasks</string>
    <string name="notesLabel">Notes:</string>
    <string name="notesHint">Optional task notes</string>
</resources>