<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginEnd="20dp"
    android:layout_marginStart="20dp"
    android:orientation="vertical"
    tools:context=".TaskDetailsActivity">

    <TextView
        style="@style/TaskDetailsLabel"
        android:text="@string/task_id_label" />

    <TextView
        android:id="@+id/taskId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="123" />

    <TextView
        style="@style/TaskDetailsLabel"
        android:text="@string/title_label" />

    <TextView
        android:id="@+id/taskTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Do the chores" />

    <CheckBox
        android:id="@+id/taskCompletionCheckbox"
        style="@style/TaskDetailsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:button="@null"
        android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
        android:drawablePadding="10dp"
        android:text="@string/task_completion_state" />


</LinearLayout>